* Fixed warning which appears after coupon deletion from admin dashboard
* Fixed free subscription gateway doubling buttons issue
* Fixed members pagination issue
* Fixed issue with not loaded coupon forms
* Fixed communication issue when all subscription is selected
* Fixed user display name and level name issues for ping data
* Fixed protection issue for BuddyPress group creation rule
* Implemented new Authorize.net gateway which changes Authorize ARB and AIM gateways
* Implemented membership access level meta box for posts and pages editing form
* Implemented functionality which hides inactive members from BuddyPress members list
* Implemented ability to upgrade subscription for admin gateway
* Implemented redirect back to a secure page when an user logins on protected page
* Implemented ability to search members by ID, login, email, url, nice name and display name
* Implemented ability to edit BuddyPress xprofile fields visibility settings
* Implemented ability to send HTML content in communication messages
* Implemented HTML editor for communication message at communication edit page
* Implemented ability to send test communication message to myself
* Implemented ability to use user display name, first and last name in a communication message
* Implemented ability to use first and last name in a ping
* Implemented ability to enter first and last name during registration
* Improved compatibility with WP Better Email plugin
* Improved rendering gateway information at the members list table
* Improved ping argument processing
* Improved 100% coupon gateway setup
* Improved BuddyPress registration form compatibility
* Improved Fancybox styles
* Improved popup registration form styles to look better on mobile devices
* Reworked purchase free subscription process
* Reworked default subscription setup for users without subscriptions
* Removed ability to deactivate user on registration

== 3.4.6 ==

* Fixed BuddyPress pages protection issue